# flet-app

./: .gitignore  api_client.py  build-apk.yml  db.py  inventory.db  main.py  models.py  pyproject.toml  remote_models.py
.github/workflows/: build-apk.yml
components/: app_bar.py  data_list.py  stat_card.py  theme.py
views/: dashboard.py  inventory.py  products.py  purchases.py  sales.py
